--- a/index.html
+++ b/index.html
@@ -792,17 +792,23 @@
           <div>
             <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
-              <div>
-                <h3 class="contact__title">Call Me</h3>
-                <span class="contact__subtitle">+998 94 448 23 40</span>
-              </div>
+              <a href="tel:998944482340">
+                <div>
+                  <h3 class="contact__title">Call Me</h3>
+                  <span class="contact__subtitle">+998 94 448 23 40</span>
+                </div>
+              </a>
             </div>
             <div class="contact__information">
               <i class="uil uil-envelope contact__icon"></i>
-              <div>
-                <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle">otabeksodiqov35@gmail.com</span>
-              </div>
+              <a target="_blank" href="mailto:otabeksodiqov35@gmail.com">
+                <div>
+                  <h3 class="contact__title">Email</h3>
+                  <span class="contact__subtitle"
+                    >otabeksodiqov35@gmail.com</span
+                  >
+                </div>
+              </a>
             </div>
             <div class="contact__information">
               <i class="uil uil-map-marker contact__icon"></i>
