--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
           <div>
             <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
-              <a href="tel:998944482340">
+              <a href="tel:+998944482340">
                 <div>
                   <h3 class="contact__title">Call Me</h3>
                   <span class="contact__subtitle">+998 94 448 23 40</span>
