--- a/index.html
+++ b/index.html
@@ -790,33 +790,41 @@
 
         <div class="contact__container container grid">
           <div>
-            <div class="contact__information">
-              <i class="uil uil-phone contact__icon"></i>
-              <a href="tel:+998944482340">
+            <a target="_blank" href="tel:+998944482340">
+              <div class="contact__information">
+                <i class="uil uil-phone contact__icon"></i>
+
                 <div>
                   <h3 class="contact__title">Call Me</h3>
                   <span class="contact__subtitle">+998 94 448 23 40</span>
                 </div>
-              </a>
-            </div>
-            <div class="contact__information">
-              <i class="uil uil-envelope contact__icon"></i>
-              <a target="_blank" href="mailto:otabeksodiqov35@gmail.com">
+              </div>
+            </a>
+            <a target="_blank" href="mailto:otabeksodiqov35@gmail.com">
+              <div class="contact__information">
+                <i class="uil uil-envelope contact__icon"></i>
+
                 <div>
                   <h3 class="contact__title">Email</h3>
                   <span class="contact__subtitle"
                     >otabeksodiqov35@gmail.com</span
                   >
                 </div>
-              </a>
-            </div>
-            <div class="contact__information">
-              <i class="uil uil-map-marker contact__icon"></i>
-              <div>
-                <h3 class="contact__title">Location</h3>
-                <span class="contact__subtitle">Farg'ona viloyati</span>
               </div>
-            </div>
+            </a>
+            <a
+              target="_blank"
+              href="https://www.google.com/maps/place/%D0%A4%D0%B5%D1%80%D0%B3%D0%B0%D0%BD%D0%B0,+%D0%A4%D0%B5%D1%80%D0%B3%D0%B0%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%9E%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%A3%D0%B7%D0%B1%D0%B5%D0%BA%D0%B8%D1%81%D1%82%D0%B0%D0%BD/@40.3798763,71.7080599,12z/data=!4m6!3m5!1s0x38bb83431937abc5:0xcfa4d876b34e7bbc!8m2!3d40.3733802!4d71.7978333!16zL20vMDQ0aGIy?entry=ttu"
+            >
+              <div class="contact__information">
+                <i class="uil uil-map-marker contact__icon"></i>
+
+                <div>
+                  <h3 class="contact__title">Location</h3>
+                  <span class="contact__subtitle">Farg'ona viloyati</span>
+                </div>
+              </div>
+            </a>
           </div>
 
           <form class="contact__form grid">
