--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
 
-    <title>Responsive Portfolio Website</title>
+    <title>My Portfolio Website</title>
   </head>
 
   <body>
