--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </p>
             <div class="about__info">
               <div>
-                <span class="about__info-title">08+</span>
+                <span class="about__info-title">2+</span>
                 <span class="about__info-name"
                   >Years <br />
                   experience</span
@@ -183,7 +183,7 @@
                 >
               </div>
               <div>
-                <span class="about__info-title">05+</span>
+                <span class="about__info-title">0</span>
                 <span class="about__info-name"
                   >Companies <br />
                   worked</span
@@ -252,7 +252,7 @@
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">React</h3>
-                  <span class="skills__number">85%</span>
+                  <span class="skills__number">60%</span>
                 </div>
                 <div class="skills__bar">
                   <span class="skills__percentage skills__react"></span>
@@ -262,7 +262,7 @@
           </div>
 
           <!--==================== SKILLS 2 ====================-->
-          <div class="skills__content skills__close">
+          <!-- <div class="skills__content skills__close">
             <div class="skills__header">
               <i class="uil uil-server-network skills__icon"></i>
               <div>
@@ -312,10 +312,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!--==================== SKILLS 3 ====================-->
-          <div class="skills__content skills__close">
+          <!-- <div class="skills__content skills__close">
             <div class="skills__header">
               <i class="uil uil-swatchbook skills__icon"></i>
               <div>
@@ -355,7 +355,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -388,46 +388,46 @@
             >
               <!--==================== QUALIFICATION 1 ====================-->
               <div class="qualification__data">
-                <div>
+                <!-- <div>
                   <h3 class="qualification__title">Computer Engineer</h3>
                   <span class="qualification__subtitle">Peru - University</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
                     2009 - 2014
                   </div>
-                </div>
+                </div> -->
 
-                <div>
+                <!-- <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
-                </div>
+                </div> -->
               </div>
               <!--==================== QUALIFICATION 2 ====================-->
               <div class="qualification__data">
                 <div></div>
 
-                <div>
+                <!-- <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
-                </div>
+                </div> -->
 
-                <div>
+                <!-- <div>
                   <h3 class="qualification__title">Web Design</h3>
                   <span class="qualification__subtitle">Span - Institute</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
                     2014 - 2017
                   </div>
-                </div>
+                </div> -->
               </div>
               <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Web Development</h3>
-                  <span class="qualification__subtitle">Peru - Institute</span>
+                  <span class="qualification__subtitle">Najot ta'lim</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
-                    2017 - 2019
+                    2022 - 2023
                   </div>
                 </div>
 
@@ -445,14 +445,14 @@
                   <!-- <span class="qualification__line"></span> -->
                 </div>
 
-                <div>
+                <!-- <div>
                   <h3 class="qualification__title">Master in UI/UX</h3>
                   <span class="qualification__subtitle">Peru - Institute</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
                     2019 - 2021
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -461,7 +461,7 @@
             <!--==================== QUALIFICATION CONTENT 2 ====================-->
             <div class="qualification__content" data-content id="work">
               <!--==================== QUALIFICATION 1 ====================-->
-              <div class="qualification__data">
+              <!-- <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Software Engineer</h3>
                   <span class="qualification__subtitle">Microsoft - Peru</span>
@@ -475,40 +475,40 @@
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
                 </div>
-              </div>
+              </div> -->
               <!--==================== QUALIFICATION 2 ====================-->
               <div class="qualification__data">
-                <div></div>
+                <!-- <div></div> -->
 
-                <div>
+                <!-- <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
-                </div>
+                </div> -->
 
-                <div>
+                <!-- <div>
                   <h3 class="qualification__title">Web Developer</h3>
                   <span class="qualification__subtitle">Apple Inc - Span</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
                     2018 - 2020
                   </div>
-                </div>
+                </div> -->
               </div>
               <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification__data">
-                <div>
+                <!-- <div>
                   <h3 class="qualification__title">UI Designer</h3>
                   <span class="qualification__subtitle">Figma - Span</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
                     2017 - 2019
                   </div>
-                </div>
+                </div> -->
 
-                <div>
+                <!-- <div>
                   <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
-                </div>
+                  <span class="qualification__line"></span>
+                </div> -->
               </div>
             </div>
           </div>
