--- a/index.html
+++ b/index.html
@@ -746,6 +746,169 @@
                 </a>
               </div>
             </div>
+            <!--==================== PORTFOLIO 4 ====================-->
+
+            <div class="portfolio__content grid swiper-slide">
+              <a target="_blank" href="https://react-use-random.netlify.app/">
+                <img
+                  src="./assets/img/portfolio4.jpg"
+                  alt="portfolio image 4"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Random User</h3>
+                <p class="portfolio__description">
+                  on this site we generate various users We can also search by
+                  name and delete users
+                </p>
+                <a
+                  target="_blank"
+                  href="https://react-use-random.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 5 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <a
+                target="_blank"
+                href="https://countries-react-otabek.netlify.app/"
+              >
+                <img
+                  src="./assets/img/portfolio5.jpg"
+                  alt="portfolio image 5"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Countries Website</h3>
+                <p class="portfolio__description">
+                  On this site we can get information about more than 200
+                  countries. Click on any flag to get information about it.
+                </p>
+                <a
+                  target="_blank"
+                  href="https://countries-react-otabek.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 6 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <a target="_blank" href="https://drums-kit-start.netlify.app/">
+                <img
+                  src="./assets/img/portfolio6.jpg"
+                  alt="portfolio image 6"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Drum Kit</h3>
+                <p class="portfolio__description">
+                  On this site we can also play a small game, drum set, a simple
+                  great game for kids
+                </p>
+                <a
+                  target="_blank"
+                  href="https://drums-kit-start.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!--==================== PORTFOLIO 7 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <a target="_blank" href="https://otabek-musicplayer.netlify.app/">
+                <img
+                  src="./assets/img/portfolio7.jpg"
+                  alt="portfolio image 7"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Music Player</h3>
+                <p class="portfolio__description">
+                  On this site we can see a music player written in Js, rate the
+                  music player with 5 songs.
+                </p>
+                <a
+                  target="_blank"
+                  href="https://otabek-musicplayer.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!--==================== PORTFOLIO 8 ====================-->
+            <div class="portfolio__content grid swiper-slide">
+              <a
+                target="_blank"
+                href="https://otabek-skilled-site.netlify.app/"
+              >
+                <img
+                  src="./assets/img/portfolio8.jpg"
+                  alt="portfolio image 8"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Skilled Website</h3>
+                <p class="portfolio__description">
+                  Our next beautifully designed website is Skilled, you can rate
+                  it by going to this site
+                </p>
+                <a
+                  target="_blank"
+                  href="https://otabek-skilled-site.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!--==================== PORTFOLIO 9 ====================-->
+
+            <div class="portfolio__content grid swiper-slide">
+              <a
+                target="_blank"
+                href="https://otabek-myteam-about.netlify.app/"
+              >
+                <img
+                  src="./assets/img/portfolio9.jpg"
+                  alt="portfolio image 9"
+                  class="portfolio__img"
+                />
+              </a>
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Myteam Website</h3>
+                <p class="portfolio__description">
+                  Our next beautifully designed website is Myteam, you can rate
+                  it by going to this site
+                </p>
+                <a
+                  target="_blank"
+                  href="https://otabek-myteam-about.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
           </div>
 
           <div class="swiper-button-next">
